feat: add shadcn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    
     "rootDirs": [".", "./.react-router/types"],
 
     /* Bundler mode */
@@ -20,8 +24,15 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
   },
   "include": ["src", ".react-router/types/**/*"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "aliases": {
+    "utils": "@/lib/utils",
+    "components": "@/components",
+    "ui": "@/app/ui",
+    "lib": "@/lib",
+     "hooks": "@/hooks"
+  }
 }
