--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.2.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.0",
