--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/react-router": "^5.1.20",
+    "@types/react-signature-canvas": "^1.0.7",
     "axios": "^1.7.9",
     "browser-image-resizer": "^2.4.1",
     "class-variance-authority": "^0.7.1",
@@ -40,6 +41,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.0",
+    "react-signature-canvas": "^1.1.0-alpha.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
